--- a/full-puzzle-model.ipynb
+++ b/full-puzzle-model.ipynb
@@ -135,25 +135,66 @@
       "Trainable params: 54,497\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Epoch 1/30\n"
-     ]
-    },
-    {
-     "ename": "InternalError",
-     "evalue": " Blas xGEMM launch failed : a.shape=[1,2454,512], b.shape=[1,512,64], m=2454, n=64, k=512\n\t [[node sequential/dense/MatMul (defined at <ipython-input-7-49893aa3d3dd>:12) ]] [Op:__inference_train_function_831]\n\nFunction call stack:\ntrain_function\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInternalError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-49893aa3d3dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Fitting the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m full_puzzle_history = full_puzzle_model.fit(x=train_gen,\n\u001b[0m\u001b[1;32m     13\u001b[0m                     \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mval_gen\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                     \u001b[0;31m# steps_per_epoch=100,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/Better-learn/lib/python3.8/site-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[1;32m   1181\u001b[0m                 _r=1):\n\u001b[1;32m   1182\u001b[0m               \u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_train_batch_begin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1183\u001b[0;31m               \u001b[0mtmp_logs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1184\u001b[0m               \u001b[0;32mif\u001b[0m \u001b[0mdata_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshould_sync\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1185\u001b[0m                 \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masync_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/Better-learn/lib/python3.8/site-packages/tensorflow/python/eager/def_function.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    887\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m       \u001b[0;32mwith\u001b[0m \u001b[0mOptionalXlaContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jit_compile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 889\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    890\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    891\u001b[0m       \u001b[0mnew_tracing_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental_get_tracing_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/Better-learn/lib/python3.8/site-packages/tensorflow/python/eager/def_function.py\u001b[0m in \u001b[0;36m_call\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    948\u001b[0m         \u001b[0;31m# Lifting succeeded, so variables are initialized and we can run the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    949\u001b[0m         \u001b[0;31m# stateless function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 950\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stateless_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    951\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    952\u001b[0m       \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfiltered_flat_args\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/Better-learn/lib/python3.8/site-packages/tensorflow/python/eager/function.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   3021\u001b[0m       (graph_function,\n\u001b[1;32m   3022\u001b[0m        filtered_flat_args) = self._maybe_define_function(args, kwargs)\n\u001b[0;32m-> 3023\u001b[0;31m     return graph_function._call_flat(\n\u001b[0m\u001b[1;32m   3024\u001b[0m         filtered_flat_args, captured_inputs=graph_function.captured_inputs)  # pylint: disable=protected-access\n\u001b[1;32m   3025\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/Better-learn/lib/python3.8/site-packages/tensorflow/python/eager/function.py\u001b[0m in \u001b[0;36m_call_flat\u001b[0;34m(self, args, captured_inputs, cancellation_manager)\u001b[0m\n\u001b[1;32m   1958\u001b[0m         and executing_eagerly):\n\u001b[1;32m   1959\u001b[0m       \u001b[0;31m# No tape is watching; skip to running the function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1960\u001b[0;31m       return self._build_call_outputs(self._inference_function.call(\n\u001b[0m\u001b[1;32m   1961\u001b[0m           ctx, args, cancellation_manager=cancellation_manager))\n\u001b[1;32m   1962\u001b[0m     forward_backward = self._select_forward_and_backward_functions(\n",
-      "\u001b[0;32m~/anaconda3/envs/Better-learn/lib/python3.8/site-packages/tensorflow/python/eager/function.py\u001b[0m in \u001b[0;36mcall\u001b[0;34m(self, ctx, args, cancellation_manager)\u001b[0m\n\u001b[1;32m    589\u001b[0m       \u001b[0;32mwith\u001b[0m \u001b[0m_InterpolateFunctionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    590\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcancellation_manager\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 591\u001b[0;31m           outputs = execute.execute(\n\u001b[0m\u001b[1;32m    592\u001b[0m               \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    593\u001b[0m               \u001b[0mnum_outputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_outputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/Better-learn/lib/python3.8/site-packages/tensorflow/python/eager/execute.py\u001b[0m in \u001b[0;36mquick_execute\u001b[0;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[1;32m     57\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m     tensors = pywrap_tfe.TFE_Py_Execute(ctx._handle, device_name, op_name,\n\u001b[0m\u001b[1;32m     60\u001b[0m                                         inputs, attrs, num_outputs)\n\u001b[1;32m     61\u001b[0m   \u001b[0;32mexcept\u001b[0m \u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_NotOkStatusException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mInternalError\u001b[0m:  Blas xGEMM launch failed : a.shape=[1,2454,512], b.shape=[1,512,64], m=2454, n=64, k=512\n\t [[node sequential/dense/MatMul (defined at <ipython-input-7-49893aa3d3dd>:12) ]] [Op:__inference_train_function_831]\n\nFunction call stack:\ntrain_function\n"
+      "Epoch 1/30\n",
+      "3953/3953 [==============================] - 2697s 678ms/step - loss: 0.4042 - acc: 0.8451 - val_loss: 0.3744 - val_acc: 0.8628\n",
+      "Epoch 2/30\n",
+      "3953/3953 [==============================] - 2702s 683ms/step - loss: 0.3677 - acc: 0.8653 - val_loss: 0.3647 - val_acc: 0.8667\n",
+      "Epoch 3/30\n",
+      "3953/3953 [==============================] - 2704s 684ms/step - loss: 0.3590 - acc: 0.8691 - val_loss: 0.3559 - val_acc: 0.8703\n",
+      "Epoch 4/30\n",
+      "3953/3953 [==============================] - 2688s 680ms/step - loss: 0.3524 - acc: 0.8716 - val_loss: 0.3518 - val_acc: 0.8712\n",
+      "Epoch 5/30\n",
+      "3953/3953 [==============================] - 2679s 678ms/step - loss: 0.3468 - acc: 0.8731 - val_loss: 0.3440 - val_acc: 0.8737\n",
+      "Epoch 6/30\n",
+      "3953/3953 [==============================] - 2687s 680ms/step - loss: 0.3401 - acc: 0.8744 - val_loss: 0.3381 - val_acc: 0.8745\n",
+      "Epoch 7/30\n",
+      "3953/3953 [==============================] - 2703s 684ms/step - loss: 0.3349 - acc: 0.8755 - val_loss: 0.3356 - val_acc: 0.8748\n",
+      "Epoch 8/30\n",
+      "3953/3953 [==============================] - 2690s 680ms/step - loss: 0.3313 - acc: 0.8762 - val_loss: 0.3298 - val_acc: 0.8769\n",
+      "Epoch 9/30\n",
+      "3953/3953 [==============================] - 2694s 682ms/step - loss: 0.3282 - acc: 0.8772 - val_loss: 0.3319 - val_acc: 0.8762\n",
+      "Epoch 10/30\n",
+      "3953/3953 [==============================] - 2684s 679ms/step - loss: 0.3259 - acc: 0.8778 - val_loss: 0.3253 - val_acc: 0.8781\n",
+      "Epoch 11/30\n",
+      "3953/3953 [==============================] - 2692s 681ms/step - loss: 0.3235 - acc: 0.8785 - val_loss: 0.3230 - val_acc: 0.8786\n",
+      "Epoch 12/30\n",
+      "3953/3953 [==============================] - 2687s 679ms/step - loss: 0.3215 - acc: 0.8791 - val_loss: 0.3235 - val_acc: 0.8787\n",
+      "Epoch 13/30\n",
+      "3953/3953 [==============================] - 2700s 683ms/step - loss: 0.3195 - acc: 0.8796 - val_loss: 0.3200 - val_acc: 0.8794\n",
+      "Epoch 14/30\n",
+      "3953/3953 [==============================] - 2679s 678ms/step - loss: 0.3180 - acc: 0.8801 - val_loss: 0.3189 - val_acc: 0.8796\n",
+      "Epoch 15/30\n",
+      "3953/3953 [==============================] - 2693s 681ms/step - loss: 0.3164 - acc: 0.8807 - val_loss: 0.3173 - val_acc: 0.8808\n",
+      "Epoch 16/30\n",
+      "3953/3953 [==============================] - 2673s 676ms/step - loss: 0.3153 - acc: 0.8810 - val_loss: 0.3183 - val_acc: 0.8804\n",
+      "Epoch 17/30\n",
+      "3953/3953 [==============================] - 2664s 674ms/step - loss: 0.3143 - acc: 0.8813 - val_loss: 0.3172 - val_acc: 0.8806\n",
+      "Epoch 18/30\n",
+      "3953/3953 [==============================] - 2667s 674ms/step - loss: 0.3130 - acc: 0.8817 - val_loss: 0.3155 - val_acc: 0.8818\n",
+      "Epoch 19/30\n",
+      "3953/3953 [==============================] - 2673s 676ms/step - loss: 0.3121 - acc: 0.8819 - val_loss: 0.3153 - val_acc: 0.8815\n",
+      "Epoch 20/30\n",
+      "3953/3953 [==============================] - 2666s 674ms/step - loss: 0.3112 - acc: 0.8822 - val_loss: 0.3128 - val_acc: 0.8822\n",
+      "Epoch 21/30\n",
+      "3953/3953 [==============================] - 2671s 676ms/step - loss: 0.3104 - acc: 0.8826 - val_loss: 0.3150 - val_acc: 0.8815\n",
+      "Epoch 22/30\n",
+      "3953/3953 [==============================] - 2685s 679ms/step - loss: 0.3093 - acc: 0.8829 - val_loss: 0.3121 - val_acc: 0.8819\n",
+      "Epoch 23/30\n",
+      "3953/3953 [==============================] - 2686s 679ms/step - loss: 0.3086 - acc: 0.8831 - val_loss: 0.3099 - val_acc: 0.8831\n",
+      "Epoch 24/30\n",
+      "3953/3953 [==============================] - 2691s 681ms/step - loss: 0.3080 - acc: 0.8834 - val_loss: 0.3114 - val_acc: 0.8827\n",
+      "Epoch 25/30\n",
+      "3953/3953 [==============================] - 2684s 679ms/step - loss: 0.3072 - acc: 0.8836 - val_loss: 0.3091 - val_acc: 0.8831\n",
+      "Epoch 26/30\n",
+      "3953/3953 [==============================] - 2680s 678ms/step - loss: 0.3066 - acc: 0.8837 - val_loss: 0.3080 - val_acc: 0.8839\n",
+      "Epoch 27/30\n",
+      "3953/3953 [==============================] - 2684s 679ms/step - loss: 0.3060 - acc: 0.8840 - val_loss: 0.3106 - val_acc: 0.8828\n",
+      "Epoch 28/30\n",
+      "3953/3953 [==============================] - 2682s 678ms/step - loss: 0.3055 - acc: 0.8842 - val_loss: 0.3084 - val_acc: 0.8836\n",
+      "Epoch 29/30\n",
+      "3953/3953 [==============================] - 2667s 675ms/step - loss: 0.3050 - acc: 0.8844 - val_loss: 0.3071 - val_acc: 0.8839\n",
+      "Epoch 30/30\n",
+      "3953/3953 [==============================] - 2677s 677ms/step - loss: 0.3045 - acc: 0.8844 - val_loss: 0.3108 - val_acc: 0.8833\n"
      ]
     }
    ],
@@ -179,24 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: LongModel-PB/assets\n"
+      "INFO:tensorflow:Assets written to: full-puzzle-PB/assets\n"
      ]
     }
    ],
    "source": [
-    "full_puzzle_model.save('full-puzzle.h5')"
+    "full_puzzle_model.save('full-puzzle-PB')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
